--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
@@ -115,21 +115,18 @@
     </div>
     <div [ngClass]="component.isTransitive?'transitive-details' : null">
         <div class="common-table component-tags">
-            <div class="common-wrapper" *ngIf="(component?.public_vulnerabilities?.length > 0) && tabType=='public'">
+            <div class="common-wrapper"
+                *ngIf="component?.registrationStatus !== 'registered' &&(component?.public_vulnerabilities?.length > 0) && tabType == 'public'">
                 <span class="info-head">Vulnerabilities:</span>
                 <span class="common-container">
                     <span *ngFor="let cve of component?.public_vulnerabilities" class="wrapper">
-                        <span class="severity"
-                            [ngClass]="{'critical':cve.severity == 'critical', 'high':cve.severity == 'high','medium':cve.severity == 'medium','low':cve.severity == 'low' && component.registrationStatus == 'registered'}">
-                            <span *ngIf="cve.severity == 'critical'" class="circle critical" [innerText]="'C'"
-                                title="Critical"></span>
-                            <span *ngIf="cve.severity == 'high'" class="circle high" [innerText]="'H'"
-                                title="High"></span>
-                            <span *ngIf="cve.severity == 'medium'" class="circle medium" [innerText]="'M'"
-                                title="Medium"></span>
-                            <span *ngIf="cve.severity == 'low'" class="circle low" [innerText]="'L'" title="Low">
-                            </span>
-                            <span *ngIf="component?.registrationStatus == 'registered'" [innerText]="cve.exploit"></span> <!-- exploit -->
+
+                        <span *ngIf="cve.severity == 'critical'" class="circle critical" [innerText]="'C'"
+                            title="Critical"></span>
+                        <span *ngIf="cve.severity == 'high'" class="circle high" [innerText]="'H'" title="High"></span>
+                        <span *ngIf="cve.severity == 'medium'" class="circle medium" [innerText]="'M'"
+                            title="Medium"></span>
+                        <span *ngIf="cve.severity == 'low'" class="circle low" [innerText]="'L'" title="Low">
                         </span>
                         <span class="custom-tooltip name"><a [href]="getUrl(cve.url, tabType)"
                                 target="_blank">{{cve.title}}</a>
@@ -150,7 +147,7 @@
                         </span>
                     </span>
                     <br>
-                    <span class="common-container box" *ngIf="component?.registrationStatus!='registered'">
+                    <span class="common-container box">
                         <a [href]="this.generateUrl.regitrationURL" target="_blank" title="command/ctrl + click">
                             <span>
                                 <img src="/assets/icon/snyk-avatar.png" alt="snyk-avatar" class="avatar" />
@@ -162,7 +159,7 @@
             </div>
 
             <div class="common-wrapper"
-                *ngIf="component?.registrationStatus == 'freetier' && (component?.private_vulnerabilities?.length > 0) && tabType=='private'">
+                *ngIf="component?.registrationStatus !== 'registered' && (component?.private_vulnerabilities?.length > 0) && tabType == 'private'">
                 <span class="info-head">Vulnerabilities:</span>
                 <span class="common-container">
                     <a class="name" [href]="getUrl(component.url, tabType, component?.registrationStatus)"
@@ -172,23 +169,75 @@
             </div>
 
             <div class="common-wrapper"
-                *ngIf="component?.registrationStatus == 'registered' && (component?.private_vulnerabilities?.length > 0) && tabType=='private'">
+                *ngIf="component?.registrationStatus == 'registered' && (component?.public_vulnerabilities?.length > 0) && tabType == 'public'">
                 <span class="info-head">Vulnerabilities:</span>
                 <span class="common-container">
-                    <span *ngFor="let cve of component?.private_vulnerabilities" class="wrapper">
+                    <span *ngFor="let cve of component?.public_vulnerabilities" class="wrapper">
                         <span class="severity"
-                            [ngClass]="{'high':cve.severity == 'high','medium':cve.severity == 'medium','low':cve.severity == 'low'}">
+                            [ngClass]="{'critical':cve.severity == 'critical', 'high':cve.severity == 'high','medium':cve.severity == 'medium','low':cve.severity == 'low'}">
+                            <span *ngIf="cve.severity == 'critical'" class="circle critical" [innerText]="'C'"></span>
                             <span *ngIf="cve.severity == 'high'" class="circle high" [innerText]="'H'"></span>
                             <span *ngIf="cve.severity == 'medium'" class="circle medium" [innerText]="'M'"></span>
                             <span *ngIf="cve.severity == 'low'" class="circle low" [innerText]="'L'"></span>
-                            <span [innerText]="cve.severity"></span>
+                            <span [innerText]="cve.exploit"></span>
                         </span>
-                        <span class="name" [innerText]="cve.title"></span>
+                        <span class="custom-tooltip name"><a [href]="getUrl(cve.url, tabType)"
+                                target="_blank">{{cve.title}}</a>
+                            <div class="custom-tooltip-wrapper">
+                                <div class="custom-tooltip-text no-wrap">
+                                    <span class="head">CVSS Score:</span>
+                                    <span class="score">{{cve.cvss}}</span>
+                                </div>
+                                <div class="custom-tooltip-text no-wrap">
+                                    <span class="head">Snyk ID:</span>
+                                    <span class="url"><a [href]="getUrl(cve.url, tabType)" target="_blank"
+                                            [innerText]="cve.id"></a></span>
+                                </div>
+                                <div class="footer no-wrap">
+                                    <span class="click">(cmd/ctrl + click)</span>
+                                </div>
+                            </div>
+                        </span>
                     </span>
                 </span>
             </div>
+
+
             <div class="common-wrapper"
-                *ngIf="component?.registrationStatus == 'freetier' && (component?.public_vulnerabilities?.length > 0 || component?.private_vulnerabilities?.length > 0) && tabType=='compDetails'">
+                *ngIf="component?.registrationStatus == 'registered' && (component?.private_vulnerabilities?.length > 0) && tabType =='private'">
+                <span class="info-head">Vulnerabilities:</span>
+                <span *ngFor="let cve of component?.private_vulnerabilities" class="wrapper">
+                    <span class="severity"
+                        [ngClass]="{'critical':cve.severity == 'critical', 'high':cve.severity == 'high','medium':cve.severity == 'medium','low':cve.severity == 'low'}">
+                        <span *ngIf="cve.severity == 'critical'" class="circle critical" [innerText]="'C'"></span>
+                        <span *ngIf="cve.severity == 'high'" class="circle high" [innerText]="'H'"></span>
+                        <span *ngIf="cve.severity == 'medium'" class="circle medium" [innerText]="'M'"></span>
+                        <span *ngIf="cve.severity == 'low'" class="circle low" [innerText]="'L'"></span>
+                        <span [innerText]="cve.exploit"></span>
+                    </span>
+                    <span class="custom-tooltip name"><a [href]="getUrl(cve.url, tabType)"
+                            target="_blank">{{cve.title}}</a>
+                        <div class="custom-tooltip-wrapper">
+                            <div class="custom-tooltip-text no-wrap">
+                                <span class="head">CVSS Score:</span>
+                                <span class="score">{{cve.cvss}}</span>
+                            </div>
+                            <div class="custom-tooltip-text no-wrap">
+                                <span class="head">Snyk ID:</span>
+                                <span class="url"><a [href]="getUrl(cve.url, tabType)" target="_blank"
+                                        [innerText]="cve.id"></a></span>
+                            </div>
+                            <div class="footer no-wrap">
+                                <span class="click">(cmd/ctrl + click)</span>
+                            </div>
+                        </div>
+                    </span>
+                </span>
+            </div>
+
+
+            <div class="common-wrapper"
+                *ngIf="component?.registrationStatus !== 'registered' && (component?.public_vulnerabilities?.length > 0 || component?.private_vulnerabilities?.length > 0) && tabType=='compDetails'">
                 <span class="info-head">Vulnerabilities:</span>
                 <span class="common-container">
                     <span *ngFor="let cve of component?.public_vulnerabilities" class="wrapper">
@@ -225,6 +274,69 @@
                     </a>
                 </span>
             </div>
+
+            <div class="common-wrapper"
+                *ngIf="component?.registrationStatus == 'registered' && (component?.public_vulnerabilities?.length > 0 || component?.private_vulnerabilities?.length > 0) && tabType=='compDetails'">
+                <span class="info-head">Vulnerabilities:</span>
+                <span class="common-container">
+                    <span *ngFor="let cve of component?.public_vulnerabilities" class="wrapper">
+                        <span class="severity"
+                            [ngClass]="{'critical':cve.severity == 'critical', 'high':cve.severity == 'high','medium':cve.severity == 'medium','low':cve.severity == 'low'}">
+                            <span *ngIf="cve.severity == 'critical'" class="circle critical" [innerText]="'C'"></span>
+                            <span *ngIf="cve.severity == 'high'" class="circle high" [innerText]="'H'"></span>
+                            <span *ngIf="cve.severity == 'medium'" class="circle medium" [innerText]="'M'"></span>
+                            <span *ngIf="cve.severity == 'low'" class="circle low" [innerText]="'L'"></span>
+                            <span [innerText]="cve.exploit"></span>
+                        </span>
+                        <span class="custom-tooltip name"><a [href]="getUrl(cve.url, tabType)"
+                                target="_blank">{{cve.title}}</a>
+                            <div class="custom-tooltip-wrapper">
+                                <div class="custom-tooltip-text no-wrap">
+                                    <span class="head">CVSS Score:</span>
+                                    <span class="score">{{cve.cvss}}</span>
+                                </div>
+                                <div class="custom-tooltip-text no-wrap">
+                                    <span class="head">Snyk ID:</span>
+                                    <span class="url"><a [href]="getUrl(cve.url, tabType)" target="_blank"
+                                            [innerText]="cve.id"></a></span>
+                                </div>
+                                <div class="footer no-wrap">
+                                    <span class="click">(cmd/ctrl + click)</span>
+                                </div>
+                            </div>
+                        </span>
+                    </span>
+
+                    <span *ngFor="let cve of component?.private_vulnerabilities" class="wrapper">
+                        <span class="severity"
+                            [ngClass]="{'critical':cve.severity == 'critical', 'high':cve.severity == 'high','medium':cve.severity == 'medium','low':cve.severity == 'low'}">
+                            <span *ngIf="cve.severity == 'critical'" class="circle critical" [innerText]="'C'"></span>
+                            <span *ngIf="cve.severity == 'high'" class="circle high" [innerText]="'H'"></span>
+                            <span *ngIf="cve.severity == 'medium'" class="circle medium" [innerText]="'M'"></span>
+                            <span *ngIf="cve.severity == 'low'" class="circle low" [innerText]="'L'"></span>
+                            <span [innerText]="cve.exploit"></span>
+                        </span>
+                        <span class="custom-tooltip name"><a [href]="getUrl(cve.url, tabType)"
+                                target="_blank">{{cve.title}}</a>
+                            <div class="custom-tooltip-wrapper">
+                                <div class="custom-tooltip-text no-wrap">
+                                    <span class="head">CVSS Score:</span>
+                                    <span class="score">{{cve.cvss}}</span>
+                                </div>
+                                <div class="custom-tooltip-text no-wrap">
+                                    <span class="head">Snyk ID:</span>
+                                    <span class="url"><a [href]="getUrl(cve.url, tabType)" target="_blank"
+                                            [innerText]="cve.id"></a></span>
+                                </div>
+                                <div class="footer no-wrap">
+                                    <span class="click">(cmd/ctrl + click)</span>
+                                </div>
+                            </div>
+                        </span>
+                    </span>
+                </span>
+            </div>
+
         </div>
 
         <div class="common-table component-licenses">
