--- a/src/app/stack/stack-details/stack-details.component.html
+++ b/src/app/stack/stack-details/stack-details.component.html
@@ -1,11 +1,11 @@
 <div class="stack-report">
     <div *ngIf="!error">
         <div *ngIf="dataLoaded">
-            <div class="row">
+            <div class="row row-styling">
                 <div class="col-md-10">
-                    <i *ngIf="tabs[0].hasWarning"
+                    <i *ngIf="tabs[0].hasWarning" class="margin"
                         [ngClass]="{'pficon-warning-triangle-o': true, 'icon-severe': tabs[0].severity === 2, 'icon-moderate': tabs[0].severity === 2}"></i>
-                    <span [innerHtml]="tabs[0].title" style="margin-left: 5px"></span>
+                    <span [innerHtml]="tabs[0].title" class="text-style margin"></span>
                 </div>
                 <div class="col-md-1">
                     <!-- Modal -->
@@ -77,7 +77,7 @@
                             <footer class="pf-c-modal-box__footer">
                                 <button type="button" class="pf-c-button pf-m-small pf-m-primary pf-m-aria-disabled"
                                     [ngClass]="{'pf-m-aria-disabled':this.tokenErrorStatus }"
-                                    (click)="submit($event)">Submit</button>
+                                    (click)="submitToken($event)">Submit</button>
                                 &nbsp;
                                 <button type="button" class="pf-c-button pf-m-small pf-m-link"
                                     (click)="modalRef.hide()">Close</button>
@@ -86,7 +86,7 @@
                     </ng-template>
                 </div>
                 <div class="col-md-1">
-                    <button mat-raised-button color="warn">Warn</button>
+                    <button type="button" class="btn btn-primary btn-sm">Share</button>
                 </div>
             </div>
             <div>
