--- a/src/app/stack/stack-details/stack-details.component.html
+++ b/src/app/stack/stack-details/stack-details.component.html
@@ -92,7 +92,7 @@
             </div>
             <div>
                 <!-- Stack Report Design Revamp - BEGIN -->
-                <analytics-report-summary (onCardClick)="handleCardClick($event)" [report]="tabs[0].content">
+                <analytics-report-summary (onCardClick)="handleCardClick($event)" [tokenDetail]="tokenDetail" [report]="tabs[0].content">
                 </analytics-report-summary>
                 <card-details [genericInformation]="genericInformation && genericInformation" *ngIf="cardDetails"
                     [cardDetails]="cardDetails" [repoInfo]="repoInfo"></card-details>
