replace text with copy icon

--- a/src/app/stack/stack-details/stack-details.component.html
+++ b/src/app/stack/stack-details/stack-details.component.html
@@ -84,8 +84,7 @@
                 </div>
                 <div class="col-md-1">
                     <button (click)="share()" type="button"
-                        class="btn btn-sm btn-info custom-tooltip name text-center">Share<i
-                            class="fa fa-share text-style margin" aria-hidden="true"></i>
+                        class="btn btn-sm btn-info custom-tooltip name text-center"><i class="fas fa-copy copy-btn"></i>
                         <div class="custom-tooltip-wrapper">
                             <div class="custom-tooltip-text">
                                 <span class="url-message">{{this.urlMessage}}</span>
