--- a/src/app/stack/stack-details/stack-details.component.less
+++ b/src/app/stack/stack-details/stack-details.component.less
@@ -168,7 +168,7 @@
       position: absolute;
       z-index: 1;
       top: 100%;
-      left: -9px;
+      left: -25px;
       opacity: 0;
       transition: .1s;
       transform: translateY(15px);
@@ -187,4 +187,8 @@
       color: #4f5a64;
       font-weight: bold;
   }
+}
+.copy-btn {
+  font-size: 13px;
+  padding: 1px;
 }
