--- a/src/app/stack/stack-details/stack-details.component.html
+++ b/src/app/stack/stack-details/stack-details.component.html
@@ -56,7 +56,7 @@
 
                                         <input class="pf-c-form-control" type="text" id="help-text-form-comment"
                                             name="help-text-form-comment" aria-describedby="help-text-form-comment-help"
-                                            [(ngModel)]="token" (keyup)="checkToken()" />
+                                            [(ngModel)]="token"/>
                                     </div>
                                 </div>
                             </form>
@@ -72,8 +72,7 @@
                         </div>
                         <div class="modal-footer">
                             <footer class="pf-c-modal-box__footer">
-                                <button type="button" class="pf-c-button pf-m-small pf-m-primary pf-m-aria-disabled"
-                                    [ngClass]="{'pf-m-aria-disabled':this.tokenErrorStatus }"
+                                <button type="button" class="pf-c-button pf-m-small pf-m-primary"
                                     (click)="submitToken($event)">Submit</button>
                                 &nbsp;
                                 <button type="button" class="pf-c-button pf-m-small pf-m-link"
