--- a/src/app/stack/stack-details/stack-details.component.html
+++ b/src/app/stack/stack-details/stack-details.component.html
@@ -56,6 +56,7 @@
 
                                         <input class="pf-c-form-control" type="text" id="help-text-form-comment"
                                             name="help-text-form-comment" aria-describedby="help-text-form-comment-help"
+                                            placeholder="(Edit &#x21E8; Paste)"
                                             [(ngModel)]="token"/>
                                     </div>
                                 </div>
@@ -65,7 +66,9 @@
                                 <small>Don’t have one?
                                     <br>
                                     Get your free Snyk token from
-                                    <a>here</a>
+                                    <a [href]="generateUrl.snykTokenURL" target="__blank" title="command/ctrl + click"
+                                    (click)="this.handleUrl.open($event, generateUrl.snykTokenURL)"
+                                    >here</a>
                                     and get access to all premium
                                     fields</small>
                             </div>
