chore: code refactor and cleanup

--- a/src/app/stack/card-details/report-information/report-information.component.html
+++ b/src/app/stack/card-details/report-information/report-information.component.html
@@ -3,7 +3,7 @@
     <div class="snyk-box"
         *ngIf="report?.tabType == 'private' && !this.transitive && this.registrationStatus!=='registered'">
         <span class="col-sm-1">
-            <img src="/assets/icon/snyk-avatar.png" alt="snyk-avatar" class="avatar" />
+            <img class="snyk-logo" src="/assets/icon/snyk-avatar.png" alt="snyk-avatar" class="avatar" />
         </span>
         <span class="col-sm-9">
             These vulnerabilities were found using Snyk's vulnerability database
