removed md-chips-b from span

--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
@@ -93,7 +93,7 @@
                 <span class="common-container">
                     <span *ngFor="let cve of component?.public_vulnerabilities" class="wrapper">
                        
-                        <span class="md-chips-b severity">
+                        <span class="severity">
                             <span [ngClass]="['md-chip-b', cve.severity]" [innerText]="cve.severity"></span>
                         </span>
                         <span class="custom-tooltip name"><a [href]="getUrl(cve.url, tabType, 'freetier')"
@@ -196,7 +196,7 @@
                 <span class="common-container">
                     <span *ngFor="let cve of component?.public_vulnerabilities" class="wrapper">
 
-                        <span class="md-chips-b severity">
+                        <span class="severity">
                             <span [ngClass]="['md-chip-b', cve.severity]" [innerText]="cve.severity"></span>
                         </span>
                         <span class="custom-tooltip name"><a [href]="getUrl(cve.url, tabType)"
