--- a/src/app/stack/card-details/component-information/component-information.component.html
+++ b/src/app/stack/card-details/component-information/component-information.component.html
@@ -63,7 +63,7 @@
                                 <a  [href]="comp?.privateSecurityDetails?.highestIssue?.url" target="_blank" class="name" title="command/ctrl + click"
                                     [innerText]="comp?.privateSecurityDetails && comp?.privateSecurityDetails?.highestIssue?.cve || '-'"></a>
                                     
-                                <span *ngIf="comp?.registrationStatus !== 'registered' && comp?.privateSecurityDetails && comp?.privateSecurityDetails?.highestIssue?.cve">
+                                <span *ngIf="comp?.registrationStatus !== 'registered' &&  comp?.privateSecurityDetails?.highestIssue?.cve">
                                     to <br> learn about the vulnerabilities found
                                 </span>
                             </span>
