fix color issue

--- a/src/app/components/main-components/Table/Table.scss
+++ b/src/app/components/main-components/Table/Table.scss
@@ -1,3 +1,10 @@
 .GridCard {
     height: 844px; 
   }
+
+.icon-class-exclamation {
+  color: #c9190b;
+}
+.icon-class-check {
+  color: #3E8635;
+}
